@@ -1,3 +1,7 @@
+1998-09-24  Miguel de Icaza  <miguel@nuclecu.unam.mx>
+
+	* hex-document.c: Added shortcut support
+
 1998-09-21  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
 
 	* callbacks.[ch] (view_changed_cb): new function; connects to
